<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:text="@string/id_usuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idusuario"
            android:inputType="phone"
            android:digits="1234567890"/>

        <TextView
            android:text="@string/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user"
            android:inputType="phone"
            android:digits="1234567890"/>/>

        <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombre" />

        <TextView
            android:text="@string/apellidop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apellidop" />

        <TextView
            android:text="@string/apellidom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apellidom" />

        <TextView
            android:text="@string/localidadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/localidadd" />

        <TextView
            android:text="@string/sexoo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sexoo" />

        <TextView
            android:text="@string/años"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/años"
            android:inputType="phone"
            android:digits="123456789"/>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/alta"
                android:id="@+id/btn_alta"
                android:onClick="alta"
                android:layout_weight="0.97" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/consulta"
                android:id="@+id/btn_consultar"
                android:onClick="consulta"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/baja"
                android:id="@+id/btn_baja"
                android:onClick="baja"
                android:layout_weight="1" />

            <Button
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:text="@string/modificar"
                android:id="@+id/btn_modificar"
                android:onClick="modificacion" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/limpiar"
                android:id="@+id/btn_limpiar"
                android:onClick="limpiar"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        </LinearLayout>
    </LinearLayout>
</ScrollView>